# robot_enseirb_2026_1A

./: .gitignore  README.md  arduino_prgm.ino  cle_rasb.id_ed25519.pub  com_esp.py  comp_global.py  depedences  detect_tag.py  flake.nix  neovim-standalone.nix  old.shell.nix.old  pyproject.toml  requirement.txt  shell.nix  tmp_path
PAMI/PAMI WIFI/: SRC
main_robot/: arduino_prgm.ino  find_tag_3D.py  fix_maybe_glere_nixos_gtk2
main_robot/math_tag_to_coordonate/: geogebra-export.ggb  math.tex
main_robot/test_moteur/: test_moteur
main_robot/test_vizion/: detect_tag.py  test.py  tmp.py
test_esp/: init_arduino-cli.sh  test_com.ino
test_esp/fst_com/: fst_com.ino  run.sh  server_side.py
