[tool.poetry]
name = "Robot princial 1A EIRBOT 2026"
version = "0.1.0"
description = "Dependences python du robot"
authors = ["aypi m <101941299+Aypimann@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.13"
opencv-python = "^4.9.0"
numpy = "^1.26.0"
pyserial = "^3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

